Fixed an issue where inner-1 image was extremely small on 1024px to 1111px width devices by increasing the size of inner-1 img. Increased size of nav bar links to 1.8rem for better visibility

--- a/style.css
+++ b/style.css
@@ -289,19 +289,20 @@ footer p {
     justify-content: normal;
     align-items: center;
     font-family: "Open Sans";
+    font-size: 1.8rem;
   }
 
   .inner-1 {
-    height: 100%;
     width: 40%;
   }
 
   .inner-1 img {
-    object-fit: fill;
+    width: 80%;
   }
 
   .inner-2 {
     width: 60%;
+    padding-right: 1rem;
   }
 
   .images {
